Добавил все файлы. Работа сдана на 9

--- a/note/sections/01_01_analysis.tex
+++ b/note/sections/01_01_analysis.tex
@@ -15,41 +15,41 @@
 До внедрения автоматизированных информационных систем (АИС), управление студией \textit{3D}-печати базируется на ручном труде и разрозненных программных инструментах. Рассмотрим типичный сценарий работы «неавтоматизированной» студии, чтобы выделить проблематику.
 
 \begin{itemize}
-    \item \textbf{Прием заказа:} Клиент отправляет файл модели через сайт (\textit{Telegram, WhatsApp}) или электронную почту. Администратор должен вручную скачать файл, открыть его в программе-слайсере (\textit{Slicer}), выставить настройки, рассчитать вес и время, а затем написать клиенту цену. Это занимает значительное время.
-    \item \textbf{Учет материалов:} Информация о катушках с пластиком хранится либо в голове сотрудника, либо на стикерах, наклеенных на сами катушки. Часто возникает ситуация, когда в таблице указано наличие «Синего \textit{PLA}», но по факту на катушке осталось 50 грамм, чего недостаточно для заказа. Оператор узнает об этом только в момент заправки принтера.
-    \item \textbf{Управление очередью:} Очередь печати формируется хаотично. Сотрудник выбирает, что печатать, исходя из субъективных предпочтений, а не срочности. Нет четкой привязки заказа к конкретному принтеру до момента запуска.
-    \item \textbf{История и статистика:} Без АИС невозможно получить аналитику: какой тип пластика самый популярный, какой принтер ломается чаще всего, какова эффективность конкретного сотрудника (\textit{Employee}). История заказов (\textit{Order History}) представляет собой архив переписок в почте, в котором крайне сложно ориентироваться.
+    \item Прием заказа: Клиент отправляет файл модели через сайт (\textit{Telegram, WhatsApp}) или электронную почту. Администратор должен вручную скачать файл, открыть его в программе-слайсере (\textit{Slicer}), выставить настройки, рассчитать вес и время, а затем написать клиенту цену. Это занимает значительное время.
+    \item {Учет материалов:} Информация о катушках с пластиком хранится либо в голове сотрудника, либо на стикерах, наклеенных на сами катушки. Часто возникает ситуация, когда в таблице указано наличие «Синего \textit{PLA}», но по факту на катушке осталось 50 грамм, чего недостаточно для заказа. Оператор узнает об этом только в момент заправки принтера.
+    \item {Управление очередью:} Очередь печати формируется хаотично. Сотрудник выбирает, что печатать, исходя из субъективных предпочтений, а не срочности. Нет четкой привязки заказа к конкретному принтеру до момента запуска.
+    \item {История и статистика:} Без АИС невозможно получить аналитику: какой тип пластика самый популярный, какой принтер ломается чаще всего, какова эффективность конкретного сотрудника (\textit{Employee}). История заказов (\textit{Order History}) представляет собой архив переписок в почте, в котором крайне сложно ориентироваться.
 \end{itemize}
 
 В таких условиях риск человеческой ошибки (запуск печати не тем цветом, потеря заказа, пропуск дедлайна) становится критическим фактором, ограничивающим рост бизнеса.
 
 В контексте реализации системы базы данных АИС студии \textit{3D}-печати выделяется ряд ключевых бизнес-процессов, подлежащих автоматизации:
 
-\begin{enumerate}[label=\arabic*]
-    \item \textbf{Управление номенклатурой материалов (Filaments):}
+\begin{itemize}
+    \item {Управление номенклатурой материалов (\textit{Filaments}):}
     Организация строгого учета расходных материалов. Система должна хранить данные о каждой конкретной катушке пластика (\textit{FilamentModel}): его цвет (\textit{hexColor}), тип (\textit{FilamentType}), стоимость за грамм (\textit{pricePerGram}) и, что наиболее важно, текущий остаток (\textit{residue}). Процесс списания материала должен быть интегрирован в процесс выполнения заказа.
 
-    \item \textbf{Управление парком оборудования (Printers):}
+    \item {Управление парком оборудования (\textit{Printers}):}
     Учет физических единиц оборудования. Каждый принтер имеет статус активности (\textit{active state}) и историю обслуживания (\textit{PrinterHistory}). Это позволяет распределять нагрузку: система не должна позволять назначать заказ на неисправный или занятый принтер.
 
-    \item \textbf{Жизненный цикл заказа (Order Lifecycle):}
+    \item {Жизненный цикл заказа (\textit{Order Lifecycle}):}
     Оценка и организация процесса прохождения заказа от заявки до выдачи. Заказ проходит через ряд статусов (\textit{OrderStatus}), которые изменяются сотрудниками или администраторами. Важнейшим аспектом является сохранение истории изменений заказа для разрешения спорных ситуаций.
     
-    \item \textbf{Аналитика и отчетность (Analytics \& Reporting):}
+    \item {Аналитика и отчетность (\textit{Analytics} \& \textit{Reporting}):}
     Сбор и визуализация данных для Аналитика (\textit{Analyst}). Это включает построение графиков продаж, анализ популярности типов пластика и оценку загруженности сотрудников. Данный процесс необходим для корректировки стратегий развития студии.
 
-    \item \textbf{Взаимодействие с пользователями (Users \& Roles):}
+    \item {Взаимодействие с пользователями (\textit{Users} \& \textit{Roles}):}
     Организация базы данных пользователей с разделением прав доступа (\textit{RoleModel}). Клиенты должны иметь возможность самостоятельно отслеживать статус своих заказов, сотрудники (\textit{Employee}) — управлять производством, а аналитики (\textit{Analyst}) — просматривать отчеты без права вмешательства в технологический процесс.
-\end{enumerate}
+\end{itemize}
 
 Поставка услуг в виде готовых изделий осуществляется за счет внутреннего производственного менеджмента. Управление производством формируется путем сопоставления параметров заказа (материал, цвет) с имеющимися ресурсами. Осуществление предоставления услуг реализуется путем своевременного назначения задач на свободные принтеры и контроля расхода материала.
 
 Среди способов взаимодействия клиента с услугами студии можно выделить ряд пунктов:
 \begin{itemize}
-    \item \textbf{Онлайн-заказ:} Оформление заявки через веб-приложение с прикреплением параметров заказа.
-    \item \textbf{Прямое взаимодействие:} Оформление заказа через администратора (по телефону или лично), который создает запись в системе от имени клиента, используя свою роль сотрудника.
-    \item \textbf{Стратегическое управление:} Доступ аналитика к «Дашборду» (панели управления) с графиками выручки и расхода материалов для принятия управленческих решений.
-    \item \textbf{Мониторинг:} Просмотр истории заказов и статусов в личном кабинете (\textit{User Profile}).
+    \item {Онлайн-заказ:} Оформление заявки через веб-приложение с прикреплением параметров заказа.
+    \item {Прямое взаимодействие:} Оформление заказа через администратора (по телефону или лично), который создает запись в системе от имени клиента, используя свою роль сотрудника.
+    \item {Стратегическое управление:} Доступ аналитика к «Дашборду» (панели управления) с графиками выручки и расхода материалов для принятия управленческих решений.
+    \item {Мониторинг:} Просмотр истории заказов и статусов в личном кабинете (\textit{User Profile}).
 \end{itemize}
 
 Следующим немаловажным бизнес-процессом является организация рабочей зоны. Необходимо осуществить цифровую маркировку принтеров. В базе данных каждый принтер имеет уникальный \textit{ID}, который физически нанесен на устройство. Это позволяет сотруднику при возникновении поломки или завершении печати точно идентифицировать устройство в системе и внести запись в журнал (\textit{Printer History}).
@@ -63,12 +63,12 @@
 Прежде чем оформить заказ, клиенту (или администратору от его имени) необходимо пройти авторизацию. Система проверяет роль пользователя (\textit{Auth with Role}). После успешного входа пользователь формирует заявку (\textit{CreateOrderRequest}).
 
 Когда заказ поступает в систему, начинается процесс его обработки сотрудником:
-\begin{enumerate}[label=\arabic*]
-    \item \textbf{Валидация и оценка:} Сотрудник проверяет возможность печати модели и выбирает подходящий материал из доступных в базе (\textit{FilamentUseCase}).
-    \item \textbf{Производство:} Заказ назначается на принтер. В этот момент сотрудник может изменить статус заказа на «В работе».
-    \item \textbf{Списание материала (Consume Filament):} Это критический этап автоматизации. По завершении печати (или перед ней) сотрудник вносит данные о фактически затраченном весе пластика. Система автоматически вычитает этот вес из остатка конкретной катушки (\textit{Update Filament Residue}). Если остаток становится меньше необходимого, система должна сигнализировать о невозможности выполнения операции или необходимости замены катушки.
-    \item \textbf{Завершение:} После успешной печати и постобработки статус заказа меняется на «Готов», а дата завершения (\textit{completedAt}) фиксируется автоматически.
-\end{enumerate}
+\begin{itemize}
+    \item {Валидация и оценка:} Сотрудник проверяет возможность печати модели и выбирает подходящий материал из доступных в базе (\textit{FilamentUseCase}).
+    \item {Производство:} Заказ назначается на принтер. В этот момент сотрудник может изменить статус заказа на «В работе».
+    \item {Списание материала (Consume Filament):} Это критический этап автоматизации. По завершении печати (или перед ней) сотрудник вносит данные о фактически затраченном весе пластика. Система автоматически вычитает этот вес из остатка конкретной катушки (\textit{Update Filament Residue}). Если остаток становится меньше необходимого, система должна сигнализировать о невозможности выполнения операции или необходимости замены катушки.
+    \item {Завершение:} После успешной печати и постобработки статус заказа меняется на «Готов», а дата завершения (\textit{completedAt}) фиксируется автоматически.
+\end{itemize}
 
 Параллельно с этим процессом ведется журнал истории заказа (\textit{OrderHistory}), куда автоматически записывается: кто изменил статус, когда это произошло и какие комментарии были оставлены.
 
