--- a/note/sections/01_02_analogues.tex
+++ b/note/sections/01_02_analogues.tex
@@ -98,8 +98,8 @@
 
 На основе проведенного анализа можно сделать вывод, что идеальная АИС для студии \textit{3D}-печати должна сочетать в себе:
 \begin{itemize}
-    \item \textbf{Простоту клиентского интерфейса} (по аналогии с \textit{CanTouch}), позволяющую пользователю быстро оформить заказ и видеть его актуальный статус.
-    \item \textbf{Мощный административный модуль} (по упрощенной модели \textit{DigiFabster}), который позволит сотрудникам управлять типами филамента (\textit{Filament Types}), вести учет остатков (\textit{Residue}) и контролировать историю действий (\textit{History}).
-    \item \textbf{Инструменты бизнес-аналитики}, предоставляющие отдельной роли (\textit{Analyst}) доступ к агрегированным данным и графикам для принятия управленческих решений без риска вмешательства в производственный процесс.
-    \item \textbf{Ролевую модель}, исключающую перегрузку интерфейса: каждый участник системы видит только те инструменты, которые необходимы для его задач.
+    \item {Простоту клиентского интерфейса} (по аналогии с \textit{CanTouch}), позволяющую пользователю быстро оформить заказ и видеть его актуальный статус.
+    \item {Мощный административный модуль} (по упрощенной модели \textit{DigiFabster}), который позволит сотрудникам управлять типами филамента (\textit{Filament Types}), вести учет остатков (\textit{Residue}) и контролировать историю действий (\textit{History}).
+    \item {Инструменты бизнес-аналитики}, предоставляющие отдельной роли (\textit{Analyst}) доступ к агрегированным данным и графикам для принятия управленческих решений без риска вмешательства в производственный процесс.
+    \item {Ролевую модель}, исключающую перегрузку интерфейса: каждый участник системы видит только те инструменты, которые необходимы для его задач.
 \end{itemize}
