--- a/note/sections/01_03_task_setting.tex
+++ b/note/sections/01_03_task_setting.tex
@@ -5,48 +5,20 @@
 
 Основной задачей, поставленной в ходе курсового проектирования, является проектирование и разработка базы данных и серверного приложения (\textit{backend}), а также клиентского интерфейса. Решение перечисленных задач позволит достигнуть цели, поставленной в курсовом проекте, а именно — создать АИС студии \textit{3D}-печати.
 
-\textbf{Требования к безопасности.} Необходимо учитывать требования к безопасности данных, гарантируя защиту конфиденциальности и целостности информации пользователей. Для обеспечения безопасности пароли всех пользователей должны проходить процесс хеширования перед сохранением в базе данных. Этот шаг направлен на защиту от компрометации учетных записей.
+\subsubsection{} Требования к безопасности. 
+
+Необходимо учитывать требования к безопасности данных, гарантируя защиту конфиденциальности и целостности информации пользователей. Для обеспечения безопасности пароли всех пользователей должны проходить процесс хеширования перед сохранением в базе данных. Этот шаг направлен на защиту от компрометации учетных записей.
+
 Важным аспектом является обеспечение доступа только авторизованным пользователям, что реализовано с помощью системы ролей (\textit{Role-Based Access Control}). Это гарантирует, что только пользователи, имеющие соответствующие полномочия (\textit{Client, Employee, Analyst, Admin}), смогут получить доступ к критическим данным и функциям, таким как списание материалов или изменение конфигурации принтеров.
 
-\textbf{Функциональные модули.} В качестве реализации функционала системы должны быть предусмотрены модули для каждой роли:
-\begin{itemize}
-    \item Для \textbf{Администратора} и \textbf{Сотрудника} должна отображаться информация об очереди заказов, клиентах, запасах филамента и состоянии принтеров.
-    \item Для \textbf{Аналитика} должен быть доступен модуль визуализации данных, реализующий отображение графиков продаж, расхода материалов и эффективности сотрудников.
-    \item Для \textbf{Клиента} — интерфейс оформления заказа с загрузкой параметров, а также раздел с историей и статусами выполнения.
-\end{itemize}
+\subsubsection{} {Функциональные модули.} 
 
-Приведем основные функциональные возможности для различных ролей системы:
+В качестве реализации функционала системы должны быть предусмотрены модули для каждой роли:
 
-\textbf{Роль Администратор (\textit{Admin}):}
 \begin{itemize}
-    \item управление учетными записями пользователей (назначение ролей);
-    \item управление справочниками (типы филамента, модели принтеров);
-    \item работа с таблицами базы данных (полный доступ);
-    \item просмотр всей истории действий в системе.
-\end{itemize}
-
-\textbf{Роль Сотрудник (\textit{Employee}):}
-\begin{itemize}
-    \item изменение статусов заказов (принят, печатается, готов);
-    \item списание расходных материалов (филамента) под конкретный заказ;
-    \item управление статусами активности принтеров (свободен/занят/ремонт);
-    \item просмотр очереди печати.
-\end{itemize}
-
-\textbf{Роль Аналитик (\textit{Analyst}):}
-\begin{itemize}
-    \item просмотр агрегированной статистики по заказам;
-    \item формирование отчетов о доходах и расходах материалов;
-    \item анализ загруженности оборудования;
-    \item экспорт аналитических данных.
-\end{itemize}
-
-\textbf{Роль Клиент (\textit{Client}):}
-\begin{itemize}
-    \item оформление нового заказа;
-    \item просмотр списка доступных материалов и цен;
-    \item отслеживание статуса своих заказов в реальном времени;
-    \item управление личным профилем.
+    \item Для {Администратора} и {Сотрудника} должна отображаться информация об очереди заказов, клиентах, запасах филамента и состоянии принтеров.
+    \item Для {Аналитика} должен быть доступен модуль визуализации данных, реализующий отображение графиков продаж, расхода материалов и эффективности сотрудников.
+    \item Для {Клиента} — интерфейс оформления заказа с загрузкой параметров, а также раздел с историей и статусами выполнения.
 \end{itemize}
 
 \subsubsection{} Архитектура проектируемой системы закладывается с учетом возможности дальнейшего расширения. В частности, использование \textit{REST API} на базе фреймворка \textit{Ktor} позволяет в будущем, в рамках дипломного проектирования, разработать кроссплатформенное мобильное приложение (для \textit{iOS} и \textit{Android}), использующее уже существующий бэкенд и модели. Это обеспечит омниканальный доступ к услугам студии без необходимости переработки серверной части.
