--- a/note/sections/02_01_design_db.tex
+++ b/note/sections/02_01_design_db.tex
@@ -120,4 +120,11 @@
 
 Более детальное описание атрибутов, взаимосвязей между сущностями и их взаимодействия представлено на логической схеме базы данных, показанной на рисунке \ref{fig:logical_db_schema}.
 
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=1\textwidth]{attachments/logical_db_schema.png}
+    \caption{Логическая схема базы данных}
+    \label{fig:logical_db_schema}
+\end{figure}
+
 Логическая схема включает таблицы с атрибутами, которые отражают сущности, связанные с процессом тестирования клиентов, а также промежуточные таблицы, предназначенные для связи этих сущностей. В каждой таблице указаны атрибуты, которые служат индикаторами конкретных записей и выполняют роль первичных ключей. Для связывания таблиц используются внешние ключи.
