--- a/note/sections/02_02_design_app.tex
+++ b/note/sections/02_02_design_app.tex
@@ -24,7 +24,7 @@
 
 Отношение расширения – указывает на то, что один вариант использования (расширение) добавляет дополнительные действия или поведение к другому варианту использования (базовому). Это помогает раскрыть детали о системе, которые обычно скрыты в базовом варианте использования, расширяя функциональные возможности системы.
 
-В АИС студии 3\textit{D}-печати \textit{KawunPrint} можно выделить следующие действующие лица: неавторизованный пользователь, клиент, сотрудник, аналитик и администратор.
+В АИС студии \textit{3D}-печати \textit{KawunPrint} можно выделить следующие действующие лица: неавторизованный пользователь, клиент, сотрудник, аналитик и администратор.
 
 Исходя из потребностей действующих лиц, выделяются следующие варианты использования:
 \begin{itemize}
@@ -33,8 +33,8 @@
     \item ввести или обновить личные данные в профиле;
     \item подтвердить \textit{Email} с помощью проверочного кода;
     \item выйти из системы;
-    \item создать заказ на 3D-печать;
-    \item загрузить файлы 3D-моделей (интеграция с \textit{Firebase Storage});
+    \item создать заказ на \textit{3D}-печать;
+    \item загрузить файлы \textit{3D}-моделей (интеграция с \textit{Firebase Storage});
     \item просмотреть список и историю своих заказов;
     \item просмотреть детализацию изменений статусов заказа;
     \item просмотреть список всех заказов (для сотрудника и аналитика);
@@ -53,12 +53,12 @@
     \item удалить пользователя или ошибочные данные из БД.
 \end{itemize}
 
-Диаграмма вариантов использования АИС студии 3\textit{D}-печати \textit{KawunPrint} представлена на рисунке \ref{fig:usecase}.
+Диаграмма вариантов использования АИС студии \textit{3D}-печати представлена на рисунке \ref{fig:usecase}.
 
 \begin{figure}[H]
     \centering
-    \includegraphics[width=0.5\textwidth]{attachments/usecade_diagram.png}
-    \caption{Диаграмма вариантов использования АИС студии 3D-печати \textit{KawunPrint}}
+    \includegraphics[width=0.62\textwidth]{attachments/usecade_diagram.png}
+    \caption{Диаграмма вариантов использования АИС студии \textit{3D}-печати}
     \label{fig:usecase}
 \end{figure}
 
@@ -68,9 +68,58 @@
 
 Эта диаграмма служит ключевым инструментом для проектирования базы данных, чётко структурируя все требования к системе и показывая, какие функции должны быть доступны различным ролям в системе.
 
+\subsubsection{} Диаграмма классов
+
+Диаграмма классов для проектируемой автоматизированной
+информационной системы управления абонентами изображена на
+рисунке \ref{fig:class_diagram}.
+
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=1\textwidth]{attachments/class_diagram.png}
+    \caption{Диаграмма классов}
+    \label{fig:class_diagram}
+\end{figure}
+
+Атрибуты характеризуют свойства объектов класса. Большинство
+объектов становятся уникальными благодаря различиям в их атрибутах и
+взаимосвязям с другими объектами.
+
+В диаграмме классов также отображаются различные виды связей
+между классами.
+
+Ассоциация – представляет собой отношение между экземплярами
+классов. Каждый конец ассоциации указывает кратность, которая показывает,
+сколько объектов с соответствующего конца могут быть вовлечены в
+данное отношение. Ассоциации могут быть названы, и обычно для этого выбирается глагол или
+глагольная фраза, которая объясняет смысл и цель связи.
+
+Агрегация – это тип ассоциации "целое-часть". В \textit{UML} агрегация
+изображается в виде прямой линии с ромбом на одном из концов. Композиция
+является разновидностью агрегации, при которой объекты-части не
+могут существовать отдельно от объекта, который их агрегирует. Если
+агрегирующий объект уничтожается, то уничтожаются и все части,
+связанные с ним. Композиция отображается
+так же, как агрегация, но ромб при этом закрашен.
+
+Наследование – это отношение "общее-частное". Оно позволяет
+создавать иерархию классов, где один класс наследует поведение и
+структуру других классов. Наследование является основой для повторного
+использования кода и достижения полиморфизма, что является важным
+инструментом в объектно-ориентированном программировании. Когда
+создается производный класс на основе базового, образуется иерархия,
+которая позволяет эффективно использовать общие компоненты кода
+в разных контекстах.
+
+Эти элементы и связи на диаграмме классов помогают чётко
+структурировать систему и моделировать её поведение и отношения между
+объектами.
+
+
+
 \subsubsection{} Схемы алгоритмов
 
-Схемы алгоритмов, или блок-схемы, представляют собой графическое отображение алгоритмов или процессов, где каждый шаг или операция алгоритма изображены в виде блоков, а связи между ними отображены стрелками. Эти схемы позволяют наглядно представить последовательность действий, которые должны быть выполнены для достижения поставленной цели. 
+Схемы алгоритмов, или блок-схемы (\textit{Flowcharts}), представляют собой фундаментальный графический инструмент в области информатики, инженерии и управления процессами. Они служат для наглядного и недвусмысленного отображения логической структуры алгоритма или последовательности действий, которые необходимо выполнить для решения конкретной задачи или достижения поставленной цели.
 
 Алгоритм авторизации (\textit{/api/v1/login}) начинается с получения данных, содержащих \textit{email} и пароль, в виде объекта \textit{LoginRequest}.
 
@@ -98,9 +147,45 @@
 
 \begin{figure}[H]
     \centering
-    \includegraphics[width=0.4\textwidth]{attachments/auth_algorithm.png}
-    \caption{Алгоритм авторизации в системе}
+    \includegraphics[width=0.37\textwidth]{attachments/auth_algorithm.png}
+    \caption{Схема алгоритма авторизации в системе}
     \label{fig:auth_algorithm}
 \end{figure}
 
-Алгоритм был сделан таким образом, чтобы подходить сразу и для администраторской части веб-преложения, и для клиентской части веб-приложения
+Алгоритм был сделан таким образом, чтобы подходить сразу и для администраторской части веб-преложения, и для клиентской части веб-приложения.
+
+Алгоритм подтверждения \textit{email} начинается с запроса на отправку кода верификации (\textit{/send}-\textit{verification}-\textit{code}).
+
+\begin{itemize}
+    \item Система получает \textit{email} и проверяет существование пользователя в \textit{Users}.
+    \item Если \textit{email} не найден, то система выводит ошибку (400 \textit{Bad Request}) и процесс завершается.
+    \item Если \textit{email} найден, система генерирует уникальный код, удаляет все старые коды для этого пользователя из \textit{EmailVerificationCodeTable} и записывает новый код с меткой времени истечения (15 минут).
+    \item Система пытается отправить код на \textit{email} пользователя с помощью \textit{EmailService}.
+    \item После этого проверяется, успешно ли отправлено сообщение.
+    \item Если да, то выводится сообщение об успешной отправке (200 \textit{OK}). Если нет, выводится ошибка (500 \textit{Internal Server Error}), и процесс завершается.
+\end{itemize}
+
+После этого начинается второй этап алгоритма – подтверждение кода верификации (\textit{/verify}-\textit{email}).
+
+\begin{itemize}
+    \setcounter{enumi}{6}
+    \item Система получает \textit{email} и введенный код.
+    \item Система проверяет существование пользователя и запрашивает из \textit{EmailVerificationCodeTable} код, который совпадает, принадлежит пользователю и не просрочен.
+    \item Если код недействителен или просрочен, то система выводит соответствующую ошибку (400 \textit{Bad Request}), и алгоритм заканчивается.
+    \item Если код действителен, система инициирует транзакцию и устанавливает флаг \textit{isActive} = \textit{true} для пользователя в таблице \textit{Users}, а затем удаляет все коды верификации для этого пользователя.
+    \item После активации пользователя система получает его обновленные данные.
+    \item Если пользователь успешно получен, генерируется новый \textit{JWT} токен, содержащий \textit{isActive} = \textit{true}.
+    \item Выводится сообщение об успешной верификации (200 \textit{OK}) с возвратом нового \textit{JWT} токена.
+    \item После этого процесс завершается.
+\end{itemize}
+
+Схема алгоритма подтверждения \textit{email} представлен на рисунке \ref{fig:email_verification_algorithm}.
+
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=0.8\textwidth]{attachments/verifier_algorithm.png}
+    \caption{Схема алгоритма подтверждения \textit{email} в системе}
+    \label{fig:email_verification_algorithm}
+\end{figure}
+
+Эти схемы алгоритмов способствуют упрощению процесса разработки и обеспечивают эффективную реализацию функциональных требований.
