--- a/note/sections/03_02_development.tex
+++ b/note/sections/03_02_development.tex
@@ -10,17 +10,14 @@
 
 В рамках данного проекта для реализации базы данных использовалась СУБД \textit{PostgreSQL}.
 
-Физическая схема базы данных представлена на рисунке.
+Физическая схема базы данных представлена на рисунке \ref{fig:phisical_scheme}
 
-%
-%
-%
-%
-%
-%
-%
-%
-%
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=0.65\textwidth]{attachments/physical_scheme.png}
+    \caption{Физическая схема базы данных}
+    \label{fig:phisical_scheme}
+\end{figure}
 
 Разработанная схема включает таблицы с атрибутами, которые отражают сущности, связанные с процессом управления студией \textit{3D}-печати (пользователи, заказы, принтеры, материалы). В каждой таблице выделены атрибуты, которые служат уникальными идентификаторами конкретных записей и выполняют роль первичных ключей (\textit{PK — Primary Key}). Для связывания таблиц между собой используются внешние ключи (\textit{FK — Foreign Key}).
 
