--- a/note/sections/03_03_development.tex
+++ b/note/sections/03_03_development.tex
@@ -4,6 +4,8 @@
 
 Архитектура приложения построена на принципах «Чистой архитектуры» (\textit{Clean Architecture}), где взаимодействие с данными инкапсулировано в слоях: от маршрутизации (\textit{Routes}) к бизнес-логике (\textit{UseCases}) и далее к базе данных. Для каждого приведенного фрагмента кода даны пояснения, раскрывающие его назначение, логику выполнения и ключевые аспекты обработки данных (валидация, проверка прав доступа через \textit{JWT}). Это позволяет детально продемонстрировать, как АИС обеспечивает целостность данных и безопасность операций в процессе управления студией.
 
+\subsubsection{} функция \textit{configureSecurity} (настойка безопасности)
+
 Одной из фундаментальных подсистем разрабатываемой АИС является модуль безопасности, обеспечивающий защиту \textit{API} от несанкционированного доступа. Для реализации механизма аутентификации был выбран стандарт \textit{JWT (JSON Web Token)}, который идеально подходит для архитектуры \textit{RESTful}-сервисов, так как не требует хранения состояния сессии на сервере (\textit{stateless}).
 
 В соответствии с принципами «Чистой архитектуры», логика валидации и генерации токенов инкапсулирована в сервисный слой и предоставляется через \textit{UserUseCase}, в то время как конфигурация плагина безопасности в \textit{Ktor} отвечает только за перехват и проверку \textit{HTTP}-запросов.
@@ -43,6 +45,8 @@ fun Application.configureSecurity() \{ \\
 \end{itemize}
 
 Генерация токена вынесена в отдельный сервис \textit{JwtService}, который формирует \textit{payload}, помещая туда \textit{ID} пользователя, его роль и срок действия токена (8 дней). Такой подход обеспечивает высокую безопасность и гибкость управления доступом.
+
+\subsubsection{} Модуль загрузки и обработки файлов
 
 Важной частью системы является модуль загрузки и обработки файлов (\textit{STL}-модели, чертежи), прикрепляемых к заказам. Этот модуль должен обеспечивать не только сохранение данных, но и строгую валидацию типов файлов, ограничение по размеру и контроль прав доступа (пользователь может удалять только свои файлы).
 
