--- a/note/sections/03_04_instruction.tex
+++ b/note/sections/03_04_instruction.tex
@@ -1,16 +1,16 @@
-\subsection{Инструкция пользователя}
+\section{Инструкция пользователя}
 
 Так как АИС представляет из себя два веб-приложения, инструкция будет разделена на две части: инструкция по работе с приложением для работников студии и инструкция по работе для клиентов.
 
 Рассмотрим сначала инструкцию для работников студии.
 
-\subsubsection{} Инструкция для работников студии
+\subsection{Инструкция для работников студии}
 
 При входе на сайт работник видит начальную входа, представленную на рисунке. У сотрудников нет кнопки регистрации, так как предполагается, что новых рабоников будет добавлять администратор системы. Скриншот начальной страницы для работников студии приведён на рисунке \ref{fig:worker_start_page}.
 
 \begin{figure}[H]
     \centering
-    \includegraphics[width=0.8\textwidth]{attachments/worker_start_page.png}
+    \includegraphics[width=1\textwidth]{attachments/worker_start_page.png}
     \caption{Начальная страница для работников студии}
     \label{fig:worker_start_page}
 \end{figure}
@@ -19,7 +19,7 @@
 
 \begin{figure}[H]
     \centering
-    \includegraphics[width=0.7\textwidth]{attachments/worker_start_page_error.png}
+    \includegraphics[width=0.85\textwidth]{attachments/worker_start_page_error.png}
     \caption{Сообщение об ошибке при попытке входа обычного пользователя на страницу работников студии}
     \label{fig:worker_start_page_error}
 \end{figure}
@@ -78,7 +78,7 @@
 
 \begin{figure}[H]
     \centering
-    \includegraphics[width=0.8\textwidth]{attachments/worker_order_statuses.png}
+    \includegraphics[width=0.6\textwidth]{attachments/worker_order_statuses.png}
     \caption{Статусы заказов на странице заказов работника студии}
     \label{fig:worker_order_statuses}
 \end{figure}
@@ -144,7 +144,7 @@
     \label{fig:worker_data_import_example}
 \end{figure}
 
-\subsubsection{} Инструкция для клиентов
+\subsection{Инструкция для клиентов}
 
 Рассмотрим домашнюю страницу клиента, представленную на рисунке \ref{fig:client_home_page}. Она показывается всем пользователям, даже неавторизованным. На этой странице клиент может ознакомиться с услугами студии, контакты, а так же авторизоватся.
 
