--- a/note/task.tex
+++ b/note/task.tex
@@ -1,8 +1,7 @@
-\setcounter{page}{2}
 % \newgeometry{top=0cm,bottom=0cm,right=0cm,left=0cm}
-% \thispagestyle{empty}
 % \setlength{\parindent}{0em}
 % \includepdf[pages=-,pagecommand={},fitpaper=true,scale=1]{task.pdf}
+\setcounter{page}{2}
 \hfill\begin{minipage}{\widthof{Заведующий кафедрой}}
 
 
@@ -10,9 +9,9 @@
 
   Заведующий кафедрой
 
-  \tline{\fontsize{10pt}{0pt}{\textit{(подпись)}}}{\hphantom{Заведующий кафедрой}}
+  \tline{\fontsize{10pt}{0pt}{\textit{(подпись)}}}{\hphantom{Заведующий}Рыбак В. А}
 
-  \underline{\hphantom{хорошая дата }}\ \  2024г.
+  \underline{\hphantom{хорошая дата }}\ \  2025г.
 
 \end{minipage}
 \medskip
@@ -64,9 +63,9 @@
 
 \uline{1. Анализ предметной области\hfill}
 
-\uline{2. Проектирование АИС студии 3\textit{D}-печати\hfill}
+\uline{2. Проектирование АИС студии \textit{3D}-печати\hfill}
 
-\uline{3. Разработка АИС студии 3\textit{D}-печати\hfill}
+\uline{3. Разработка АИС студии \textit{3D}-печати\hfill}
 
 \uline{4. Инструкция пользователя\hfill}
 
@@ -74,7 +73,9 @@
 
 \uline{Список использованных источников\hfill}
 
-\uline{Приложение А (обязательное) ER-диаграмма в нотации Питера Чена\hfill}
+\uline{Приложение А (обязательное) Листинг программы\hfill}
+
+\uline{Приложение Б (обязательное) \textit{ER}-диаграмма в нотации Питера Чена\hfill}
 
 \uline{Ведомость курсовой работы\hfill}
 
@@ -82,7 +83,7 @@
 
 \smallskip
 \noindent
-5. Консультант по проекту \uline{\hfill А. Ф. Трофимович \hfill}
+5. Консультант по проекту \uline{\hfill А. И. Лаппо \hfill}
 
 \smallskip
 \noindent
@@ -101,15 +102,15 @@
 
  \uline{раздел 3 к 19.11 –  90\%\hfill}
 
- \uline{оформление пояснительной записки и графических материалов к 11.12 – 100\%\hfill}
+ \uline{оформление пояснительной записки и графических материалов к 01.12 – 100\%\hfill}
 
- \uline{Защита курсового проекта с \textbf{11.12} по \textbf{19.12.2025} г.\hfill}
+ \uline{Защита курсового проекта с \textbf{02.12} по \textbf{19.12.2025} г.\hfill}
 \end{minipage}
 
 \bigskip
 \noindent
 \begin{tabular*}{\textwidth}{@{}l@{\extracolsep{\fill}}c@{}r@{}}
-  Руководитель\hfill& \tline{(подпись)}{\hphantom{любимый котик}} & \hfill Трофимович А. Ф.\\
+  Руководитель\hfill& \tline{(подпись)}{\hphantom{любимый котик}} & \hfill Лаппо А. И.\\
   Задание принял к исполнению\hfill & \tline{(подпись)}{\hphantom{любимый котик}} &\hfill Марковцев С. В.
 \end{tabular*}
 
