--- a/note/title.tex
+++ b/note/title.tex
@@ -10,21 +10,22 @@
         \begin{tabular}{ l l }
           Факультет & информационных технологий и управления\\
           Кафедра & информационных технологий автоматизированных систем\\
-          Дисциплина & системы управления базами данных
         \end{tabular}
       \end{flushleft}
     \end{minipage}\\[1em]
 
     \vfill
     {ПОЯСНИТЕЛЬНАЯ ЗАПИСКА}\\
-    {к курсовой работе}\\
+    {к курсовому проекту}\\
+    {по дициплине}\\
+    {Системы управления базами данных}\\
     {на тему}\\[1em]
     \MakeUppercase{Автоматизированная информационная система студии \textit{3D}-печати}\\[1em]
     \vfill
      \vfill
     \begin{tabular}{ p{0.65\textwidth}p{0.25\textwidth} }
       Студент & С. В. Марковцев \\
-      Руководитель & А. Ф. Трофимович \\
+      Руководитель & А. И. Лаппо \\
     \end{tabular}
     \textbf{\large \MakeUppercase {}}\\[5em]
     {\normalsize Минск 2025}
